--- a/projects/latte-preview/src/index.html
+++ b/projects/latte-preview/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <latte-root></latte-root>
 </body>
 </html>
